[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/editor/editor_plugins/SlideHoldCreator/SlideHoldCreatorControl.gd" type="Script" id=1]
[ext_resource path="res://tools/editor/HBEditorSpinBox.gd" type="Script" id=2]

[node name="SlideHoldCreatorControl" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 14.0
text = "Chain note piece placement interval (usually 2x your song's note resolution)."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1920.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 13.0
margin_bottom = 19.0
text = "1/"

[node name="ResolutionSpinBox" type="SpinBox" parent="HBoxContainer"]
margin_left = 13.0
margin_right = 1920.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
value = 32.0
suffix = "th of a note"
script = ExtResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_top = 46.0
margin_right = 1920.0
margin_bottom = 60.0
text = "Beats"

[node name="BeatsSpinBox" type="SpinBox" parent="."]
margin_top = 64.0
margin_right = 1920.0
margin_bottom = 88.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
step = 0.0
value = 2.0
suffix = "beats"
script = ExtResource( 2 )

[node name="CreateButton" type="Button" parent="."]
margin_top = 92.0
margin_right = 1920.0
margin_bottom = 112.0
focus_mode = 0
enabled_focus_mode = 0
text = "Create Slide Chain"

[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
